# mad_soft_test

./: .env  .gitignore  README.md  docker-compose.yaml  pyproject.toml
memes/migrations/: Dockerfile  script.py  settings.py
memes/private_backend/: Dockerfile  main.py
memes/private_backend/src/: s3_client.py  settings.py
memes/public_backend/: Dockerfile  main.py
memes/public_backend/src/: crud.py  dbmanager.py  dependencies.py  models.py  schemas.py  settings.py
memes/public_backend/src/routers/: memes.py
services/private_backend/: main.py
services/public_backend/: main.py
services/public_backend/src/: crud.py  dbmanager.py  models.py  private_client.py
services/public_backend/src/routers/: memes.py
srvices/private_backend/: Dockerfile  main.py
srvices/public_backend/: Dockerfile
srvices/public_backend/src/routers/: memes.py
tests/: conftest.py  test_memes.py  test_ping.py
tools/: .black.toml  .flake8  .isort.cfg  .pre-commit-config.yaml
