[tool.poetry]
name = "memes-project"
version = "0.1.0"
description = ""
authors = ["k1cker666 <pomoymu@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pre-commit = "^3.7.1"
isort = "^5.13.2"
black = "^24.4.2"
flake8 = "^7.1.0"
fastapi = "^0.111.0"
sqlalchemy = "^2.0.30"
pydantic = "^2.7.4"
psycopg = "^3.1.19"
pydantic-settings = "^2.3.3"
minio = "^7.2.7"
python-dotenv = "^1.0.1"
requests = "^2.32.3"
repackage = "^0.7.3"
yandex-taxi-testsuite = "^0.2.1"


[tool.poetry.group.private_api.dependencies]
fastapi = "^0.111.0"
pydantic-settings = "^2.3.3"
minio = "^7.2.7"
gunicorn = "^22.0.0"


[tool.poetry.group.public_api.dependencies]
fastapi = "^0.111.0"
sqlalchemy = "^2.0.31"
pydantic = "^2.7.4"
psycopg = "^3.1.19"
pydantic-settings = "^2.3.3"
gunicorn = "^22.0.0"
pytest = "^8.2.2"


[tool.poetry.group.migrations.dependencies]
psycopg = {extras = ["binary"], version = "^3.1.19"}
pydantic-settings = "^2.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
